[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainScenes/oie_Zl05O8ISwpIk.png" type="Texture" id=1]
[ext_resource path="res://Doomguy/Doomguy.gd" type="Script" id=2]
[ext_resource path="res://sounds/attacksound.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.9915
height = 23.4588

[node name="Doomguy" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.09061 )
shape = SubResource( 1 )

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftBarrel" type="Node2D" parent="FiringPositions"]
position = Vector2( -10, -32 )

[node name="RightBarrel" type="Node2D" parent="FiringPositions"]
position = Vector2( 10, -32 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="fireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Doomguy_area_entered"]
